@@ -64,6 +64,7 @@ enum class EventType
 	MIDI, 
 	ACTION, 
 	CHANNEL_TOGGLE_READ_ACTIONS,
+	CHANNEL_KILL_READ_ACTIONS,
 	CHANNEL_TOGGLE_ARM,
 	CHANNEL_MUTE,
 	CHANNEL_SOLO,
